--- a/CattyLove API/package.json
+++ b/CattyLove API/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
-    "mongoose": "^6.3.0"
+    "mongoose": "^6.3.0",
+    "upper-case-first": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
