--- a/CattyLove API/package.json
+++ b/CattyLove API/package.json
@@ -14,8 +14,10 @@
   "author": "W.A.U.S.Wijesuriya M.S.A.M.Fernando G.S.P.Perera M.T.K.C.Abeysinghe",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
     "upper-case-first": "^2.0.2"
   },
